--- a/navbar.html
+++ b/navbar.html
@@ -43,6 +43,12 @@
                 background-color: rgb(241, 194, 194);
             }
 
+            a{
+                color: white;
+            }
+
+
+
     </style>
 </head>
 <body>
@@ -53,8 +59,8 @@
         <div>
             <p>Men</p>
             <p>Women</p>
-            <p>Login</p>
-            <p>signup</p>
+            <p> <a href="login.html" target="_blank"> Login</a></p>
+            <p> <a href="signup.html" target="_blank">signup</a> </p>
         </div>
       </div>  
 </body>
